retour case départ :'-(

--- a/elevage/report.html
+++ b/elevage/report.html
@@ -367,7 +367,7 @@ summary {
 
 <div id="production" class="section level1">
 <h1>Production</h1>
-<p>Au bout du 10 eme jour d’elevage avec une population de x individus de l’espèce x on peut esperer produire x g de matière sèche.</p>
+<p>Au bout du na eme jour d’elevage avec une population de na individus de l’espèce na on peut esperer produire na g de matière sèche.</p>
 </div>
 <div id="reproduction" class="section level1">
 <h1>Reproduction</h1>
